edited tests, but cohort dropout in a seperate file

--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from numpy.random import seed\n",
     "seed(1)\n",
     "\n",
-    "from PatientSet import PatientSet\n",
+    "from PatientSet import *\n",
     "from Constants import Constants\n",
     "import Metrics\n",
     "from analysis import *\n",
@@ -40,14 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,70 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  mean_tumor_distances /= tumor_volume\n",
-      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  tumor_position /= tumor_volume\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error reading tumor volume for  10041\n",
-      "error reading tumor volume for  10091\n",
-      "error reading tumor volume for  10148\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W1002 23:28:27.624442  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n",
-      "W1002 23:28:27.625442  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n",
-      "W1002 23:28:27.629443  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
-      "\n",
-      "W1002 23:28:27.637443  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4115: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
-      "\n",
-      "W1002 23:28:27.721448  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "patient data loaded...\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "db = load_patientset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def augmented_db(db = None, db_args = {}):\n",
     "    if db is None:\n",
     "        db = PatientSet(**db_args)\n",
     "    db.toxicity = db.feeding_tubes + db.aspiration > 0\n",
     "    return(db)\n",
-    "\n",
-    "db = augmented_db()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "classifiers = [\n",
     "#                    DecisionTreeClassifier(),\n",
     "#                    DecisionTreeClassifier(criterion='entropy'),\n",
@@ -320,7 +267,7 @@
     "                  ]\n",
     "\n",
     "cluster_root= 'data/clustering_results/'\n",
-    "feature_file_names = ['metaClusteringBootstrapped3']\n",
+    "feature_file_names = ['metaClusteringBootstrapped500MinmaxBest.csv']\n",
     "#llop through all files of feature extracted from toxicity clustering\n",
     "all_results = []\n",
     "additional_features = None\n",
@@ -339,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,21 +301,21 @@
       "toxicity\n",
       "0.7402551381998583\n",
       "\n",
-      "metaClusteringBootstrapped3\n",
+      "metaClusteringBootstrapped500MinmaxBest\n",
       "feeding_tubes\n",
-      "0.7649387129724208\n",
+      "0.7709397344228806\n",
       "aspiration\n",
-      "0.7598138993893574\n",
+      "0.7685373655132305\n",
       "toxicity\n",
-      "0.7929659815733522\n",
+      "0.8003189227498229\n",
       "\n",
-      "metaClusteringBootstrapped3+baseline\n",
+      "metaClusteringBootstrapped500MinmaxBest+baseline\n",
       "feeding_tubes\n",
-      "0.8068181818181819\n",
+      "0.7935393258426966\n",
       "aspiration\n",
-      "0.8438499563826695\n",
+      "0.8242221576039547\n",
       "toxicity\n",
-      "0.8428419560595323\n",
+      "0.8251240255138199\n",
       "\n"
      ]
     }
@@ -397,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +360,7 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.5865679264555669\n",
+      "0.586567926455567\n",
       "\n",
       "\n",
       "None\n",
@@ -426,7 +373,7 @@
       "0.6031183557760453\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -435,20 +382,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7359550561797752\n",
+      "0.7216547497446375\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7542890375109044\n",
+      "0.7380052340796744\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7671863926293409\n",
+      "0.7347625797306874\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -457,17 +404,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6292134831460674\n",
+      "0.6281920326864148\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.620529223611515\n",
+      "0.6420471067170689\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.6647767540751239\n",
+      "0.6856839121190644\n",
       "\n",
       "\n"
      ]
@@ -490,14 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -519,7 +466,7 @@
       "0.7888022678951098\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -554,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -563,7 +510,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -572,20 +519,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6912665985699694\n",
+      "0.6856486210418795\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8601337598138994\n",
+      "0.8450130851991857\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8332742735648476\n",
+      "0.8261871013465627\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -594,17 +541,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.703524004085802\n",
+      "0.6935648621041879\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8633323640593196\n",
+      "0.8473393428322187\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8417788802267895\n",
+      "0.8307937632884478\n",
       "\n",
       "\n"
      ]
@@ -623,14 +570,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -639,20 +586,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6790091930541369\n",
+      "0.6945863125638406\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7359697586507705\n",
+      "0.7760977028205874\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7381289865343729\n",
+      "0.7414953933380581\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped500MinmaxBest.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -661,17 +608,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.686414708886619\n",
+      "0.6754341164453525\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.861878453038674\n",
+      "0.8377435300959581\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8270729978738482\n",
+      "0.8182140326009921\n",
       "\n",
       "\n"
      ]
@@ -708,70 +655,6 @@
     "          + datetime.fromtimestamp(time()).strftime('%Y_%m_%d_%H%M%S')\n",
     "          + '.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['AUC', 'Baseline', 'Top_feature_file', 'Top_features', 'classifier',\n",
-       "       'cluster_names', 'outcome', 'resampler'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
