more kubernettes edits

--- a/PYTHON/SensitivityAnalysis.ipynb
+++ b/PYTHON/SensitivityAnalysis.ipynb
@@ -528,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_cluster_importances = cluster_importances = cluster_feature_selector.get_importances(true, db.toxicity, as_df = True)\n",
+    "true_cluster_importances = cluster_feature_selector.get_importances(true, db.toxicity, as_df = True)\n",
     "true_cluster_importances.describe()\n",
     "true_cluster_importances.to_csv(save_root + 'truedose_cluster_importances.csv')"
    ]
