new notebook for journal specific figure analysis stuff

--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -51,7 +51,7 @@
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "\n",
-    "baseline_feature_file = 'data/baselineClustering.csv'"
+    "baseline_feature_file = Constants.baseline_feature_file"
    ]
   },
   {
