more progress on figure and testing for that

--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,8 @@
     "df_rescale = Metrics.normalize\n",
     "\n",
     "#for now just constrain it to one cluster\n",
-    "n_clusters = 2\n",
+    "n_clusters = 4\n",
+    "mutual_info_thresh = 0.00001\n",
     "\n",
     "#number of cpus to use when running the feature selection\n",
     "n_jobs = 8\n",
@@ -98,7 +99,7 @@
     "\n",
     "#where to save results, put None if you don't want to save\n",
     "save_root = 'data/clustering_results/'\n",
-    "run_file_name = 'metaClusteringBootstrapped500MinmaxBest.csv'"
+    "run_file_name = 'metaClusteringBootstrapped500NormalizedBest.csv'"
    ]
   },
   {
@@ -130,7 +131,7 @@
     "        if re.search('Eyeball', o) is not None:\n",
     "            organs.remove(o)\n",
     "    \n",
-    "    train, test = get_train_test_datasets(db, unclusterable_features, \n",
+    "    train, _ = get_train_test_datasets(db, unclusterable_features, \n",
     "                                          clusterable_features, \n",
     "                                          train_features, \n",
     "                                          test_features,\n",
@@ -139,14 +140,20 @@
     "    \n",
     "    if df_rescale is not None:\n",
     "        train = df_rescale(train)\n",
-    "        test = df_rescale(test)\n",
-    "    selection_clusterer = BestClusterer()\n",
+    "        \n",
+    "    if mutual_info_thresh >= 0:\n",
+    "        from sklearn.feature_selection import mutual_info_classif\n",
+    "        info_scores = mutual_info_classif(train.values, toxicity)\n",
+    "        good_args = np.argwhere(info_scores > mutual_info_thresh).ravel()\n",
+    "        train = train.iloc[:,good_args]\n",
+    "    \n",
+    "    selection_clusterer = BestClusterer(max_clusters = 5)\n",
     "#     selection_clusterer  = FClusterer(n_clusters, dist_func = l2)\n",
     "    feature_selector = FeatureClusterSelector(\n",
     "        n_samples = n_samples,\n",
     "        model = selection_clusterer,\n",
     "        n_jobs = n_jobs).fit(train, toxicity)\n",
-    "    to_use = feature_selector.transform(test)\n",
+    "    to_use = feature_selector.transform(train)\n",
     "    labels = feature_selector.predict_labels(train, toxicity)\n",
     "    print()\n",
     "    print()\n",
@@ -157,7 +164,6 @@
     "    #we're going to try a bunch of different clusterings and look at the best result\n",
     "    clustering = get_optimal_clustering(to_use.values, \n",
     "                                        toxicity,\n",
-    "                                        metric = cluster_metric,\n",
     "                                       min_clusters = n_clusters,\n",
     "                                       max_clusters = n_clusters)\n",
     "    print(clustering[1].method)\n",
